feat: update bus booking backend and frontend