@@ -6,9 +6,11 @@ import com.busbooking.exception.ResourceNotFoundException;
 import com.busbooking.repository.BusRepository;
 import com.busbooking.repository.SeatRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -18,6 +20,7 @@ public class SeatServiceImpl implements SeatService {
     private final BusRepository busRepository;
 
     @Override
+        @Cacheable(value = "seatAvailability", key = "#busId", unless = "#result == null")
     public List<SeatResponseDto> getSeatsByBusId(String busId) {
         Bus bus = busRepository.findById(busId)
                 .orElseThrow(() -> new ResourceNotFoundException("Bus not found with id: " + busId));
@@ -30,6 +33,6 @@ public class SeatServiceImpl implements SeatService {
                         .isBooked(seat.getIsBooked())
                         .busId(seat.getBusId())
                         .build())
-                .toList();
+                .collect(Collectors.toList());
     }
 }
